--- a/style.css
+++ b/style.css
@@ -1,11 +1,8 @@
 body {
+    
     background-repeat: no-repeat;
     background-size: contain;
     background-repeat: repeat-y;
-    display: grid;
-    grid-column: 8fr 8fr 8fr;
-    grid-row: 8fr 8fr 8fr 8fr;
-    
 }
 
 .header {
@@ -14,8 +11,24 @@ body {
     padding: 10px;
     text-align: center;
     margin-bottom: 10px;
+   
 }
 .header h1 {
     margin: 0;
     font-size: 2.5rem;
+}
+
+
+.navbar {
+    display: flex;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 10px;
+}
+
+.navbar a {
+    color: white;
+    margin: 0 15px;
+    font-size: 1.2rem;
+    font-weight: bold;
 }
