--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
     padding: 10px;
     text-align: center;
     margin-bottom: 10px;
-   
 }
 .header h1 {
     margin: 0;
@@ -32,3 +31,32 @@ body {
     font-size: 1.2rem;
     font-weight: bold;
 }
+
+.container {
+    display: grid;
+    grid-template-rows: 200px 200px;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    width: 80%;
+    max-width: 1000px;
+    background-size: cover;
+    padding: 10px;
+    border: 2px solid #000;
+    margin-top: 15px;
+    grid-column: 2/3;
+
+}
+
+.box {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid #ccc;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-size: 1.2em;
+    padding: 10px;
+    margin-right: 20px;
+}
+
