--- a/style.css
+++ b/style.css
@@ -60,3 +60,14 @@ body {
     margin-right: 20px;
 }
 
+#box2 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+h2{
+    display: flex;
+    justify-content: center;
+}
